[gd_scene load_steps=6 format=3 uid="uid://drcweefw840r3"]

[ext_resource type="Script" path="res://ui/level_complete.gd" id="1_336ks"]
[ext_resource type="Theme" uid="uid://dt7cs1ptpftme" path="res://ui/themes/Bolder.tres" id="2_sc3k5"]
[ext_resource type="Theme" uid="uid://dh7cgp4wswxi3" path="res://ui/themes/lessBold.tres" id="3_347lg"]
[ext_resource type="Theme" uid="uid://c037ts28mkfoy" path="res://ui/themes/Bold.tres" id="3_xu6e8"]
[ext_resource type="PackedScene" uid="uid://0im5s06d6220" path="res://ui/level_select/truth_table_row_no_check.tscn" id="4_2he0a"]

[node name="LevelComplete" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_336ks")

[node name="TitleLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -262.5
offset_top = 4.0
offset_right = 262.5
offset_bottom = 102.0
grow_horizontal = 2
theme = ExtResource("2_sc3k5")
text = "Level Complete !"
horizontal_alignment = 1
vertical_alignment = 1

[node name="LevelPass" type="Panel" parent="."]
custom_minimum_size = Vector2(300, 0)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -375.0
offset_top = -189.0
offset_right = 393.0
offset_bottom = 294.0
grow_horizontal = 2
grow_vertical = 2

[node name="Title" type="Label" parent="LevelPass"]
layout_mode = 1
offset_left = 44.0
offset_top = 52.0
offset_right = 155.0
offset_bottom = 75.0
theme = ExtResource("3_xu6e8")
text = "Level Stats"

[node name="TruthTableHeading" parent="LevelPass" instance=ExtResource("4_2he0a")]
layout_mode = 0
offset_left = 410.0
offset_top = 28.0
offset_right = 730.0
offset_bottom = 68.0

[node name="TruthTableScroll" type="ScrollContainer" parent="LevelPass"]
custom_minimum_size = Vector2(249, 297)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 23.0
offset_top = -164.5
offset_right = 356.0
offset_bottom = 197.5
grow_horizontal = 2
grow_vertical = 2

[node name="TruthTable" type="VBoxContainer" parent="LevelPass/TruthTableScroll"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="AccuracyLabel" type="Label" parent="LevelPass"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -340.0
offset_top = 116.0
offset_right = -237.0
offset_bottom = 139.0
grow_horizontal = 2
theme = ExtResource("3_347lg")
text = "Accuracy"

[node name="AccuracyValueLabel" type="Label" parent="LevelPass"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -215.0
offset_top = 117.0
offset_right = -110.0
offset_bottom = 148.0
grow_horizontal = 2
theme = ExtResource("3_347lg")
text = "Accuracy"
horizontal_alignment = 2

[node name="SpeedLabel" type="Label" parent="LevelPass"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -341.0
offset_top = 147.0
offset_right = -236.0
offset_bottom = 178.0
grow_horizontal = 2
theme = ExtResource("3_347lg")
text = "Speed
"

[node name="SpeedValueLabel" type="Label" parent="LevelPass"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -221.0
offset_top = 152.0
offset_right = -116.0
offset_bottom = 183.0
grow_horizontal = 2
theme = ExtResource("3_347lg")
text = "Speed
"
horizontal_alignment = 2

[node name="ContinueButton" type="Button" parent="LevelPass"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 91.0
offset_top = -78.0
offset_right = 183.0
offset_bottom = -25.0
grow_vertical = 0
text = "continue"

[node name="RetryButton" type="Button" parent="LevelPass"]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 102.0
offset_top = -136.0
offset_right = 170.0
offset_bottom = -83.0
grow_vertical = 0
text = "Retry"

[connection signal="pressed" from="LevelPass/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="LevelPass/RetryButton" to="." method="_on_retry_button_pressed"]
